# CUDA_genetic_task_scheduling

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.py
data/: jobs_data_100_5_10_100.txt  jobs_data_100_5_10_20.txt  jobs_data_100_5_20.txt  jobs_data_500_10_60.txt
generator/: data_generator.py
genetic/include/: Individual.hpp  Population.hpp
genetic/src/: Individual.cpp  Population.cpp
greedy/include/: Greedy.h  Greedy.hpp
greedy/src/: Greedy.cpp
